option('maintainer-mode', type: 'combo', choices: ['false', 'if-git-build', 'true'],
  value: 'if-git-build', description: 'Let mm-common-get copy some files to untracked/')
option('warnings', type: 'combo', choices: ['no', 'min', 'max', 'fatal'],
  value: 'min', description: 'Compiler warning level')
option('dist-warnings', type: 'combo', choices: ['no', 'min', 'max', 'fatal'],
  value: 'fatal', description: 'Compiler warning level when a tarball is created')
option('build-deprecated-api', type: 'boolean', value: true,
  description: 'Build deprecated API and include it in the library')
option('build-documentation', type: 'combo', choices: ['false', 'if-maintainer-mode', 'true'],
  value: 'if-maintainer-mode', description: 'Build and install the documentation')
option('build-manual', type: 'boolean', value: true,
  description: 'Build tutorial HTML files, if documentation is built')
option('validation', type: 'boolean', value: true,
  description: 'Validate the tutorial XML file, if tutorial HTML files are built')
option('build-pdf', type: 'boolean', value: false,
  description: 'Build tutorial PDF file, if tutorial HTML files are built')
option('build-examples', type: 'boolean', value: true,
  description: 'Build example programs')
option('build-tests', type: 'boolean', value: true,
  description: 'Build test programs')
option('benchmark', type: 'boolean', value: false,
  description: 'Build and test benchmark program')
